prevent overflow of blocked url

--- a/popup.css
+++ b/popup.css
@@ -112,6 +112,9 @@ h1 {
     color: #333;
     margin-bottom: 4px;
     word-break: break-all;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .blocked-item-domain {
